# xwavelet

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  appveyor.yml  codecov.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yaml  linting.yaml  test.yml
ci/: environment-py3.6.yml  environment-py3.7.yml  environment-py3.8.yml  environment-py3.9.yml  environment.yml
xwavelet/: __init__.py  wavelet.py
xwavelet/tests/: test_wavelet.py
