[metadata]
name = xwavelet
description = Discrete wavelet Transform with xarray
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/roxyboy/xwavelet
author = xwavelet Developers
author_email = tuchida@fsu.edu
license = "MIT"
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha copy
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Documentation =
    Source = https://github.com/roxyboy/xwavelet
    Tracker = https://github.com/roxyboy/xwavelet/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    xarray
    dask
    numpy
    pandas
    scipy
    cftime 
python_requires = >=3.7

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[options.extras_require]
io =
    cftime
agg =
    numpy_groupies
test =
    pytest >= 7.0.0
    pytest-cov
    xrft
all =
    %(io)s
    %(agg)s
    %(test)s

[flake8]
exclude = __init__.py,pyproject.toml,.eggs,doc
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503

[isort]
known_first_party = xwavelet
known_third_party = xarray,dask,numpy,pandas,scipy,cftime,xoa,numpy_groupies,pytest,setuptools
